Added guitar wall picture

--- a/index.htm
+++ b/index.htm
@@ -6,8 +6,8 @@
     <META NAME="Template" CONTENT="C:\PROGRAM FILES\MICROSOFT OFFICE\OFFICE\HTML.DOT">
     </HEAD>
     <BODY LINK="#0000ff" VLINK="#800080" BACKGROUND="background.jpg">
-    
-     <B><P ALIGN="CENTER"><A HREF="toys.html"><FONT SIZE=5>My Toys</FONT></A></P>
+
+    <P ALIGN="LEFT  "><IMG SRC="GuitarWall.jpg" ALT = "Guitar Wall" WIDTH=1000></P>
     <TABLE CELLSPACING=0 BORDER=0 CELLPADDING=7 WIDTH=1024>
     
     <TR><TD WIDTH="25%" VALIGN="TOP">
