Converted guitar picture to sketch

--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
     </HEAD>
     <BODY LINK="#0000ff" VLINK="#800080" BACKGROUND="background.jpg">
 
-    <P ALIGN="LEFT  "><IMG SRC="GuitarWall.jpg" ALT = "Guitar Wall" WIDTH=1000></P>
+    <P ALIGN="LEFT  "><IMG SRC="GuitarWallSketch.jpg" ALT = "Guitar Wall"></P>
     <TABLE CELLSPACING=0 BORDER=0 CELLPADDING=7 WIDTH=1024>
     
     <TR><TD WIDTH="25%" VALIGN="TOP">
