--- a/index.htm
+++ b/index.htm
@@ -90,7 +90,9 @@
     <TD WIDTH="24%" VALIGN="TOP">
     <B><P>Places I Like To Go</B> <BR>
     <FONT FACE=ARIAL SIZE=2>
-    &nbsp;(under construction)<BR>
+    &nbsp;<A HREF="https://bourgeoisguitars.com/">Bourgeois Guitars</A><BR>
+    &nbsp;<A HREF="https://mcphersonguitars.com/">McPherson Guitars</A><BR>
+    &nbsp;<A HREF="https://usa.yamaha.com/products/musical_instruments/index.html">Yamaha Musical Instrument</A><BR>        
     </FONT>
     
     <TD WIDTH="24%" VALIGN="TOP">
