Added links to songs

--- a/index.htm
+++ b/index.htm
@@ -84,7 +84,10 @@
     
     <TD WIDTH="25%" VALIGN="TOP">
     <B><P>Sound Bites</B> <BR>
-    &nbsp;(under construction)<BR>
+    &nbsp;<A HREF="https://on.soundcloud.com/sD374">Old Man</A><BR>
+    &nbsp;<A HREF="https://on.soundcloud.com/kdvsH">Can't Find My Way Home</A><BR>
+    &nbsp;<A HREF="https://on.soundcloud.com/eisWk">Hesitation Blues</A><BR>
+       
     </TD>
     </TR>
     </TABLE>
