--- a/index.htm
+++ b/index.htm
@@ -87,6 +87,10 @@
     &nbsp;<A HREF="https://on.soundcloud.com/sD374">Old Man</A><BR>
     &nbsp;<A HREF="https://on.soundcloud.com/kdvsH">Can't Find My Way Home</A><BR>
     &nbsp;<A HREF="https://on.soundcloud.com/eisWk">Hesitation Blues</A><BR>
+
+    <TD WIDTH="25%" VALIGN="TOP">
+    <P ALIGN="LEFT  "><IMG height="200" SRC="MrPeabodyPlayingGuitar.gif" ALT = "Mr. Peabody"></P>
+           
        
     </TD>
     </TR>
